productpage/product_page.css
@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
      
        *{
           font-family: 'Mulish', sans-serif;
        }
        body{
          background-color: rgb(245, 245, 246);
        }

        /* Image Carousel  */
        .swiper {
        width: 100%;
      }

      .swiper-slide {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: relative;
        margin-right: 10px;
      }
      .swiper-btn {
        background-color: white;
        padding: 10px 15px;
        border-radius: 50%;
      }
      .swiper-button-next:after,
      .swiper-button-prev:after {
        font-size: 21px;
        color: black;
        font-weight: 900;
      }

      .swiper-slide img {
        display: block;
        width: 100%;
      }

      @media only screen and (min-width: 769px) {
        .swiper-slide:first-child {
          transition: transform 100ms;
        }

        .swiper-slide:first-child img {
          transition: box-shadow 500ms;
        }

        .swiper-slide.swiper-slide-active:first-child {
          transform: translateX(50%);
          z-index: 2;
        }

        .swiper-slide.swiper-slide-active:first-child img {
          box-shadow: 0px 32px 80px rgba(0, 0, 0, 0.35);
        }

        .swiper-slide:nth-child(2) {
          transition: transform 100ms;
        }

        .swiper-slide.swiper-slide-next:nth-child(2) {
          transform: translateX(55%);
          z-index: 1;
        }

        .swiper[dir="rtl"] .swiper-slide.swiper-slide-active:first-child {
          transform: translateX(-50%);
        }

        .swiper[dir="rtl"] .swiper-slide.swiper-slide-next:nth-child(2) {
          transform: translateX(-55%);
        }
      }

  /* Image Carousel End */



body{
    background-color: whitesmoke;

}
/*
.container{
    width: 85%;
    height: 100%;
    margin: auto;

}
.container div{
    margin: 1%;
}
.row{
    display: flex;
   
}
*/
.center{
    align-items: center;
}



.cart-small-txt{
    font-size: 12px;
    color:#BDBDBD;

}

.item-btn{
    border: 1px solid #FFA000;
    background-color: white;
    color: black;
    font-size: 18px;
    border-radius: 4px 7px 7px 4px;
    margin: 8px;
    height: 40px;
    width: 40px;
}
#plus-btn{
    border-radius: 7px 4px 4px 7px;

}
.p-text-color{
    color:#726e6e;
    font-size: 14px;

}
.margin{
    margin: 6px;
}

.addtoCartBtn{
    width: 50%;
    height: 30px;
    border-radius: 4px;
    font-size: 15px;
    font-weight: 500;
    color: black;
    border: none;
    background-color: #FFCA28; 
}
.cart-bottom-left{
    width: 85%;
}
.cart-bottom-right{
    width: 15%;
}
.checkout-btn{
    width: 100%;
    height: 46px;
    border-radius: 4px;
    font-size: 16px;
    font-weight: 600;
    color: black;
    border: none;
    background-color: #FFCA28;
}
.text-bold{
    font-size: 22px;
    font-weight: 700;
}
.line-height{
    line-height: 0%;
}

@media (min-width:901px){
    
    .container{
        width: 85%;
        height: 100%;
        margin: auto;
    
    }
    .container div{
        margin: 1%;
    }
    .row{
        display: flex;
       
    }

    .col-left{
        position: sticky;
        top: 107px;
        z-index: 1;
        width: 15%;
        height: 30%;
        
        padding: 15px;
        background-color: white;
        border: none;
        border-radius: 2px;
        cursor: pointer;
    
    }
    .col-mid{
       
        width: 50%;
        height: auto;
        border-radius: 2px;
        display: grid;
        grid-template-columns: repeat(2,49%);
       column-gap: 3%;
       row-gap: 0.5%;
    }
    .col-right{
        position:sticky;
        top: 107px;
        z-index: 1;
        width: 33%;
        height: 30%;
    
        border-radius: 2px;
        border: none;
        background-color: white;
        padding: 15px;
    
    }
}



@media (min-width:601px)and (max-width:900px){
    
    .container{
        width: 85%;
        height: 100%;
        margin: auto;
    
    }
    .container div{
        margin: 1%;
    }
    .row{
        display: flex;
       
    }

    .col-left{
        position: sticky;
        top: 107px;
        z-index: 1;
        width: 15%;
        height: 30%;
        
        padding: 15px;
        background-color: white;
        border: none;
        border-radius: 2px;
        cursor: pointer;
    
    }
    .col-mid{
       
        width: 83%;
        height: auto;
        border-radius: 2px;
        display: grid;
        grid-template-columns: repeat(3,29%);
       column-gap: 3%;
       row-gap: 0.5%;
    }
    .col-right{
        display: none;
    
    }
}



@media (max-width:600px){
    .checkout-btn{
    width: 100%;
      height: 20%;
        bottom: 0;
        left: 0;
        z-index: 1199;
        right: 0;
        background-color: white;
        position: sticky;
    }
    
    .cart-bottom,.cart-top{
        display: flex;
    }
    
    .col-left{
        width: 100%;
        margin: auto;
        background-color: white;
        border: none;
        border-radius: 2px;
        cursor: pointer;
        padding: 15px;

    }
    .col-mid{
      width: 80%;
      margin: auto;
      height: auto;
      border-radius: 2px;
     
     column-gap: 3%;
     row-gap: 0.5%;
    }
    .col-mid>div{
        margin: 5%;
      
    }
    .col-right{
        width: 100%;
        border-radius: 2px;
        border: none;
        background-color: white;
    }
    
    .checkout-btn{
        width: 100%;
        height: 46px;
        border-radius: 4px;
        font-size: 16px;
        font-weight: 600;
        color: black;
        border: none;
        background-color: #FFCA28;
    }
}
/* ... */

